--- a/css/styles.css
+++ b/css/styles.css
@@ -10,3 +10,12 @@
   padding-left: 10px;
   margin: 12px;
 }
+
+.img-responsive {
+    margin: 0 auto;
+}
+
+.places {
+  font-weight: bold;
+  color: red;
+}
