--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,10 @@
   text-align: center;
 }
 
+h2.intro {
+  padding-bottom: 20px;
+}
+
 .container1 {
   padding-left: 10px;
   margin: 12px;
@@ -18,4 +22,13 @@
 .places {
   font-weight: bold;
   color: red;
+}
+
+.projects {
+  margin: 12px;
+  border: 2px solid black;
+  padding: 4px;
+  background-color: grey;
+  color: white
+
 }
